feat(重构): KeywordRegexIntentMatcher 改用 Caffeine TTL，去除 @PostConstruct 和 @EventListener